# beauty_admin

./: .bandit  .dockerignore  .gitmodules  .pre-commit-config.yaml  Dockerfile  docker-compose.yml  docker-entrypoint.sh  gunicorn-conf.py  migrate_db.py  pyproject.toml  server.py  whitelist.txt
.github/workflows/: buildandpush.yml
beauty_admin/: __init__.py  app.py  middlewares.py
beauty_admin/api/: base.py
beauty_admin/conf/: constants.py  db.py  logging.py  settings.py
beauty_admin/schemas/: base.py
beauty_admin/templates/: master.html
beauty_admin/views/: base.py  business.py  location.py
